karl package Changelog
======================

Unreleased
----------

- For mailin: improve logging, bounce when too big, only process 100 at a
  time, skip duplicate mailin tracers. (LP #1472774)

- Increase LiveSearch threshold on keypress buffering to 0.8 seconds.
  (LP #1477886)

- Only KarlAdmin can see the link to the tag listing. (LP #1472765)

4.9 (2015-07-04)
----------------

- The bad browser message had a detect user agent function that didn't
  support IE11+ (including Edge). (LP #1469302)

4.8 (2015-06-21)
----------------

- Double the pgtextindex_maxlen to 44000

- Add a pgtextindex.max_ranked to suppress ranking on huge result sets

- Add an ``underprofile`` tween to allow per-request temporary
  triggering of the Python profiler. Add ``?__profile__`` to the URL.

- This release brings in the big, big fix to repoze.pgtextindex which
  converts from Bucket to BTree, which is where most of the time was
  being spent.

4.7 (2015-06-05)
----------------

- Lower the upper length of the amount of text that KARL indexes, to
  keep it within the TOAST limit of 250 Kb. (LP #1461637)

4.6.1
-----

- Brownbag, didn't get templates into the release

4.6
---

- Ensure that NotFound/HTTPNotFound/ReadOnlyError causes 
  ``karl.errorpage.errorpage`` view to be invoked (LP #1418227)

- Merge arc2box

4.5 (2014-11-28)
----------------

- Remove bottlecap and pyramid_bottlecap as part of de-UX2 (LP #1377202)

- Delete should be a POST not a GET (LP #1386234)

4.4 (2014-11-10)
----------------

- Restore objects loaded/evicted in connection stats (LP #1378058)

- Profile value not JSON serializable on grid (LP #1391134)

4.3 (2014-11-07)
----------------

- Major part of the work to remove UX2 and Chatter

4.2 (2014-11-5)
---------------

- Show a warning for browsers IE8 and less (LP #1351893)

- Last Move To fixes (slug/de-slug starting at 100th item) (LP #1347066)

- Third round of gulpification (LP #1374575)

4.1 (2014-10-05)
----------------
