@@ -37,7 +37,6 @@ from karl.models.interfaces import IContextualSummarizer
 from karl.models.interfaces import IGroupSearchFactory
 from karl.models.interfaces import IProfile
 from karl.utilities.groupsearch import default_group_search
-from karl.utilities.groupsearch import WeightedQuery
 from karl.utils import coarse_datetime_repr
 from karl.utils import find_catalog
 from karl.utils import find_root
@@ -85,12 +84,7 @@ def make_query(context, request):
     else:
         searcher = default_group_search
 
-    if term:
-        weighted_term = WeightedQuery(term)
-    else:
-        weighted_term = None
-
-    searcher = searcher(context, request, weighted_term)
+    searcher = searcher(context, request, term)
     query.update(searcher.criteria)
 
     creator = params.get('creator')
@@ -422,14 +416,6 @@ def jquery_livesearch_view(context, request):
         msg = "Client failed to send a 'val' parameter as the searchterm"
         return HTTPBadRequest(msg)
 
-    if '__profile__' in searchterm:
-        enable_profile = True
-        searchterm = searchterm.replace('__profile__', '')
-    else:
-        enable_profile = False
-
-    weighted_term = WeightedQuery(searchterm)
-
     # maybe do some * checking to verify that we don't have a
     # prefix search < 3 chars
 
@@ -452,18 +438,10 @@ def jquery_livesearch_view(context, request):
             listitems = (dict(component=search_utility),)
             # we'll just have on type of results, so we return back 20 results
             results_per_type = 20
-
-    if enable_profile:
-        import cProfile
-        import pstats
-        import StringIO
-        pr = cProfile.Profile()
-        pr.enable()
-
     start_time = time.time()
     for listitem in listitems:
         utility = listitem['component']
-        factory = utility(context, request, weighted_term)
+        factory = utility(context, request, searchterm)
         if factory is None:
             continue
         factory.limit = results_per_type
@@ -485,15 +463,6 @@ def jquery_livesearch_view(context, request):
     end_time = time.time()
     log.debug('livesearch: %0.3fs for "%s", kind=%s',
         end_time - start_time, searchterm, kind)
-
-    if enable_profile:
-        pr.disable()
-        s = StringIO.StringIO()
-        ps = pstats.Stats(pr, stream=s).sort_stats('cumtime')
-        ps.print_stats(100)  # Limit to 100 lines
-        log.warning(
-            'livesearch profile: %0.3fs for "%s", kind=%s\n%s',
-            end_time - start_time, searchterm, kind, s.getvalue())
 
     return records
 
